Feature OOGA-29: add input method to API